--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ PyJWT==2.8.0
 django-cors-headers==4.3.1
 
 # Database
-# psycopg2-binary==2.9.9  # Optional: Nur für PostgreSQL
+mysqlclient==2.2.0  # MySQL Adapter
 
 # Environment Variables
 python-decouple==3.8
@@ -28,6 +28,11 @@ drf-spectacular==0.27.0
 
 # Social Authentication
 django-allauth==0.63.3
+
+# MFA (Multi-Factor Authentication)
+pyotp==2.9.0
+qrcode==8.0
+Pillow==10.2.0
 
 # Redis for caching/sessions (Optional)
 # redis==5.0.1
