--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,9 @@ Thumbs.db
 .coverage
 htmlcov/
 .pytest_cache/
+
+# Deployment scripts
 deploy.sh
 deploy_mysql.sh
+deploy_existing_db.sh
+update.sh
