--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
-# Django Settings
+# ===========================
+# DJANGO CORE
+# ===========================
+# Generieren Sie einen neuen SECRET_KEY mit:
+# python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
 SECRET_KEY=your-secret-key-here-change-in-production
+
+# Entwicklung: True, Produktion: False
 DEBUG=True
+
+# Domains die auf den Service zugreifen dürfen (kommasepariert)
+# Für Produktion: auth.palmdynamicx.de,www.auth.palmdynamicx.de
 ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Database
+# ===========================
+# DATABASE
+# ===========================
+# Für Entwicklung: django.db.backends.sqlite3 (keine weiteren DB-Einstellungen nötig)
+# Für Produktion: django.db.backends.postgresql
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=auth_service
 DB_USER=postgres
@@ -11,29 +24,106 @@ DB_PASSWORD=your-password
 DB_HOST=localhost
 DB_PORT=5432
 
-# Redis
-REDIS_URL=redis://localhost:6379/0
+# ===========================
+# SECURITY (HTTPS in Produktion)
+# ===========================
+# WICHTIG: In Produktion auf True setzen!
+# SECURE_SSL_REDIRECT=True
+# SESSION_COOKIE_SECURE=True
+# CSRF_COOKIE_SECURE=True
+# SECURE_HSTS_SECONDS=31536000
+# SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+# SECURE_HSTS_PRELOAD=True
 
-# OAuth2 Settings
+# ===========================
+# CORS - Cross-Origin-Anfragen
+# ===========================
+# Fügen Sie ALLE Websites hinzu, die auf die API zugreifen dürfen (kommasepariert)
+# WICHTIG: Nur vertrauenswürdige Domains eintragen!
+# Für Produktion: https://palmdynamicx.de,https://www.palmdynamicx.de,https://app.palmdynamicx.de
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
+
+# CSRF Trusted Origins (für POST-Requests von anderen Domains)
+# Für Produktion: https://auth.palmdynamicx.de,https://palmdynamicx.de,https://www.palmdynamicx.de
+# CSRF_TRUSTED_ORIGINS=https://auth.palmdynamicx.de,https://palmdynamicx.de
+
+# ===========================
+# JWT TOKENS
+# ===========================
+# Access Token Gültigkeitsdauer in Minuten (Standard: 15)
+JWT_ACCESS_TOKEN_LIFETIME_MINUTES=60
+
+# Refresh Token Gültigkeitsdauer in Tagen (Standard: 7)
+JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
+
+# JWT-Algorithmus (Standard: HS256)
+JWT_ALGORITHM=HS256
+
+# Separater JWT Secret Key (optional, sonst wird SECRET_KEY verwendet)
+JWT_SECRET_KEY=your-jwt-secret-key
+
+# ===========================
+# OAUTH2 SETTINGS
+# ===========================
 OAUTH2_ACCESS_TOKEN_EXPIRE_SECONDS=3600
 OAUTH2_REFRESH_TOKEN_EXPIRE_SECONDS=86400
 
-# JWT Settings
-JWT_SECRET_KEY=your-jwt-secret-key
-JWT_ALGORITHM=HS256
-JWT_ACCESS_TOKEN_LIFETIME_MINUTES=60
-JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
-
-# CORS Settings
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
-
-# Email Settings (optional)
+# ===========================
+# EMAIL (SMTP)
+# ===========================
+# Backend: django.core.mail.backends.smtp.EmailBackend (Produktion)
+#          django.core.mail.backends.console.EmailBackend (Entwicklung - zeigt E-Mails in Konsole)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+
+# SMTP-Server (z.B. Gmail, SendGrid, AWS SES)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
+
+# SMTP-Zugangsdaten
 EMAIL_HOST_USER=your-email@example.com
 EMAIL_HOST_PASSWORD=your-password
 
-# Frontend URLs
+# Absender-Adresse
+# DEFAULT_FROM_EMAIL=PalmDynamicX Auth <noreply@palmdynamicx.de>
+# SERVER_EMAIL=PalmDynamicX Auth <noreply@palmdynamicx.de>
+
+# ===========================
+# FRONTEND URLs
+# ===========================
+# Basis-URL Ihrer Frontend-Anwendung (für E-Mail-Links)
+# Für Produktion: https://palmdynamicx.de
 FRONTEND_URL=http://localhost:3000
+
+# ===========================
+# REDIS (Optional - für Caching)
+# ===========================
+# Falls Redis verfügbar, kann es für Caching und Sessions verwendet werden
+# REDIS_URL=redis://localhost:6379/0
+
+# ===========================
+# SOCIAL LOGIN (Optional)
+# ===========================
+# Google OAuth - https://console.cloud.google.com/apis/credentials
+# GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
+
+# Facebook OAuth - https://developers.facebook.com/apps/
+# FACEBOOK_APP_ID=
+# FACEBOOK_APP_SECRET=
+
+# GitHub OAuth - https://github.com/settings/developers
+# GITHUB_CLIENT_ID=
+# GITHUB_CLIENT_SECRET=
+
+# Microsoft OAuth - https://portal.azure.com/
+# MICROSOFT_CLIENT_ID=
+# MICROSOFT_CLIENT_SECRET=
+
+# Apple Sign In - https://developer.apple.com/
+# APPLE_CLIENT_ID=
+# APPLE_CLIENT_SECRET=
+# APPLE_KEY_ID=
+# APPLE_PRIVATE_KEY=
+
