--- a/.env.example
+++ b/.env.example
@@ -127,3 +127,13 @@ FRONTEND_URL=http://localhost:3000
 # APPLE_KEY_ID=
 # APPLE_PRIVATE_KEY=
 
+# ===========================
+# LEXWARE API INTEGRATION
+# ===========================
+# Lexware API Key für die automatische Kundenerstellung bei Registrierung
+# Dokumentation: https://developers.lexware.io/docs/
+# API Key erstellen: https://app.lexware.de/addons/public-api
+LEXWARE_API_KEY=
+
+# Optional: Automatische Erstellung deaktivieren (Standard: True)
+# LEXWARE_AUTO_CREATE=False
